--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,3 +1,4 @@
+platform :ios, '8.0'
 use_frameworks!
 
 target 'CollectionAndTableViewCompatible_Example' do
@@ -6,6 +7,6 @@ target 'CollectionAndTableViewCompatible_Example' do
   target 'CollectionAndTableViewCompatible_Tests' do
     inherit! :search_paths
 
-    
+
   end
 end
